--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div><a href="https://youtu.be/R3w8u-38-Eo">My current favourite song is Love me</a></div>
 </body>
 
 </html>
